test/domains/dinan/assoc_array_access_oob.chpl
var indices: domain(int);
var elems  : [indices] real;

elems[5] += 1;

writeln("indices is: ", indices);
writeln("elems is: ", elems);
